The new size of the carousel was not responsive. Amended this by using col-sm-12 col-lg-8. Used justify-content-center as the carousel was no longer middled but now is. Added a margin between the quotes and name of people saying them.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,11 @@ footer {
     background-color: #ec931f96;
 }
 
+
+
 /***************Carousel*************/
+
+
 
 .carousel-font {
     Font-family: 'Playfair Display', sans-serif;
@@ -225,13 +229,15 @@ footer {
     Font-family:'Raleway', serif;
     Font-size: 3vw;
     Font-weight: 200;
-    text-shadow: none;
+    margin-bottom: 5%;
+    
 }
 
 .h4-carousel1 {
     font-family: 'Raleway', serif;
     color: #3c3030;
     font-size: 2.5vw;
+    vertical-align: middle;
     }
 
 .h2-carousel2 
@@ -239,6 +245,7 @@ footer {
 Font-family: 'Raleway', serif;
 Font-size: 3vw;
 Font-weight: 100;
+margin-bottom: 5%;
 }
 
 .h4-carousel2 {
@@ -252,12 +259,14 @@ Font-family: 'Raleway', serif;
 Font-size: 3vw;
 text-shadow: 0.5px 0.5px #000;
 Font-weight: 200;
+margin-bottom: 5%;
 }
 
 .h4-carousel3 {
 font-family: 'Raleway', serif;color: #f3730a;
 font-size: 2.5vw;
 text-shadow: 0.5px 0.5px #000;
+
 }
 
 /******Gallery*******/
